# CppAdvancePrograming2

./: .gitignore  CMakeLists.txt  HW1_final_grades.xlsx  Makefile  README.md  bonus.txt  input_errors.txt  layout.txt  log.txt  output.txt  tanks_game  test_visualizer  test_visualizer.cpp  text
.cache/clangd/index/: GameManager.h.7B9275DCB9CC4CDA.idx  Map.h.4CD1A8EE9D4F3D77.idx  cmake_test.cpp.F8D2A41AD268617C.idx  game_manager.cpp.6A62A92A3AA2C02B.idx  main.cpp.30F4B71A45A52BF6.idx  map.cpp.750CDEDC2D3D0AD8.idx  map_test.cpp.F25C24E366FAC084.idx  place_holder.cpp.CB8C8C59A529F1A3.idx
.github/workflows/: test.yml
common/: ActionRequest.h  BattleInfo.h  ConfigManager.h  Constants.h  Direction.h  DirectionUtility.h  Entity.h  EntityType.h  GameManager.h  GamePlayer.h  GamePlayerFactory.h  HashUtils.h  IJson.h  InputHelper.h  Logger.h  Map.h  MoveableEntity.h  MyPlayer.h  MySatelliteView.h  OutputPrinter.h  Player.h  PlayerFactory.h  Pos.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmFactory.h  Visualizer.h
common/algorithms/: ChaserTankAlgorithm.h  MyTankAlgorithmFactory.h  SniperTankAlgorithm.h  TankBattleInfo.h
common/entities/: Mine.h  Shell.h  Tank.h  Wall.h
common/utils/: Tile.h
data/: test.txt
files/: config.json  test_map_1.txt
files/input_maps/extra_maps/: input_complex_flp.txt  input_simple.txt  test_invalid_chars.txt  test_surrounded_by_mines_variation.txt
files/output_maps/: output_test_map_1.txt  output_test_map_2.txt
files/tests/algorithm/chaser/: test_chaser_horizontal.txt  test_chaser_vertical.txt
files/tests/algorithm/shooter/: big_shoot.txt  test_sniper_move_and_shoot.txt  test_sniper_vertical.txt
files/tests/edge_cases/: multiplayers.txt  test_map_1.txt  test_map_2.txt  test_map_3.txt  test_map_edge_cols.txt  test_map_edge_rows.txt  zero_map.txt
files/tests/entities/tank/: test_tanks_id.txt  test_tanks_owner_id.txt
files/tests/input_maps/extra_maps/: test_map_cols_overflow.txt  test_surrounded_by_mines.txt
files/tests/maps/: input_big_multiple_players.txt  missing_rows_map.txt  test_map_2.txt  test_map_3.txt  test_map_4_big_9_multiple_players.txt  test_map_cols_overflow.txt  test_map_cols_undeflow.txt  test_map_missing_cols.txt  test_map_missing_rows.txt  test_surrounded_by_mines.txt
files/tests/maps/Test Maps/: test_map_whitespace.txt
files/tests/maps/extra_maps/: test_map_symbol.txt
files/tests/output_maps/: output_test_map_3.txt  output_test_map_4_big_9_multiple_players.txt
src/: CMakeLists.txt  MySatelliteView.cpp  main.cpp  main.d
src/algorithms/: ChaserTankAlgorithm.cpp  MyTankAlgorithmFactory.cpp  SniperTankAlgorithm.cpp  TankBattleInfo.cpp
src/entities/: Entity.cpp  Mine.cpp  MoveableEntity.cpp  Shell.cpp  Tank.cpp  Wall.cpp  entities.hpp  entity.cpp  entity.d  living_entity.cpp  living_entity.d  mine.cpp  mine.d  shell.cpp  shell.d  tank.cpp  tank.d  wall.cpp  wall.d
src/game_algo/: attacker.cpp  attacker.d  chaser.cpp  chaser.d  game_algo.hpp
src/game_env/: game_env.hpp  game_manager.cpp  game_manager.d  game_wrapper.hpp  player.cpp  player.d
src/game_enviroment/: GameManager.cpp  GamePlayer.cpp  GamePlayerFactory.cpp  game_manager.cpp
src/utils/: ConfigManager.cpp  Constants.cpp  InputHelper.cpp  Logger.cpp  OutputPrinter.cpp  Visualizer.cpp  action.cpp  action.d  direction.cpp  direction.d  logger.cpp  logger.d  map.cpp  status.cpp  status.d  tile.cpp  utils.cpp  utils.hpp
tanks-ui/: package-lock.json  package.json
tanks-ui/src/: App.tsx  main.tsx
tanks-ui/src-tauri/: Cargo.toml  tauri.conf.json
tanks-ui/src-tauri/src/: main.rs
tanks-ui/src/components/: game_board.tsx
tests/: CMakeLists.txt  chaser_algo_test.cpp  cmake_test.cpp  edge_cases_test.cpp  map_test.cpp  output_printer_test.cpp  sniper_algo_test.cpp  tank_entity_test.cpp  test_json.cpp  test_visualizer  test_visualizer.cpp
